--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>Meu Portifólio</title>
+  <link rel="icon" href="/home/alineferreira/Documentos/Portfolio/img/ALINE.jpg">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
@@ -24,7 +26,7 @@
 
 </head>
 
-<body>
+<body class>
   <nav class="navbar navbar-expand-lg navbar-light corSecundaria">
     <a class="navbar-brand textoBranco" href="#">Aline Ferreira</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -55,16 +57,16 @@
   </nav>
   <section class="jumbotron text-center corPrimaria ">
     <div class="container">
-      <img class="foto-perfil" src="img/perfil-aline-min.jpg" alt="Fotografia de Aline Ferreira">
+      <img class="foto-perfil" src="/home/alineferreira/Documentos/Portfolio/img/ALINE.jpg" alt="Fotografia de Aline Ferreira">
       <h1 class="jumbotron-heading textoBranco">Aline Ferreira</h1>
       <p class="lead textoBranco">Estudante de Tecnologia - Criador de conteúdo - Analista e desenvolvedora</p>
       <p>
         <a href="#contato" class="btn btn-outline-primary my-2 textoBranco">Contato</a>
 
       </p>
-      <a href="https://www.linkedin.com/in/aline-ferreira-2835a7226/"><i class=" textoBranco icones fab fa-linkedin"></i></a>
-      <a href="https://github.com/AlineferreiraP"><i class=" textoBranco icones fab fa-github"></i></a>
-      <a href="https://www.instagram.com/alineferreirapena/"><i class=" icones textoBranco fab fa-instagram"></i></a>
+      <a href="https://linkedin.com/in/alineferreirap/" target="_blank"><i class=" textoBranco icones fab fa-linkedin"></i></a>
+      <a href="https://github.com/AlineferreiraP" target="_blank"><i class=" textoBranco icones fab fa-github"></i></a>
+      <a href="https://www.instagram.com/alineferreirapena/" target="_blank"><i class=" icones textoBranco fab fa-instagram"></i></a>
     </div>
   </section>
 
@@ -126,6 +128,60 @@
             </div>
           </div>
         </div>
+        <div class="col-md-6">
+          <div class="card mb-4 box-shadow">
+            <img class="card-img-top"
+              data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
+              alt="Thumbnail [100%x225]" 
+              src="/home/alineferreira/Documentos/Portfolio/img/print_calGetGeb.jpg" data-holder-rendered="true">
+            <div class="card-body">
+              <p class="card-text">Programa cálculo de gasto energia basal (estimativa Harris-Benedict)
+                Tecnologias: </p>
+              <ul>
+                <li>Javascript</li>
+                <li>HTML</li>
+                <li>CSS</li>
+
+              </ul>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <a href="https://github.com/AlineferreiraP/ProjeGEBGET" target="_blank"><button type="button"
+                      class="btn btn-sm btn-outline-primary">Ver código</button></a>
+
+
+                </div>
+
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="card mb-4 box-shadow">
+            <img class="card-img-top"
+              data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
+              alt="Thumbnail [100%x225]" 
+              src="/home/alineferreira/Documentos/Portfolio/img/colagem-front-end-mentor.jpg" data-holder-rendered="true">
+            <div class="card-body">
+              <p class="card-text"> Desafio Front-End-Mentor.
+                Tecnologias: </p>
+              <ul>
+                
+                <li>HTML</li>
+                <li>CSS</li>
+
+              </ul>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <a href="https://github.com/AlineferreiraP/ProductPreviewCardComponent" target="_blank"><button type="button"
+                      class="btn btn-sm btn-outline-primary">Ver código</button></a>
+
+
+                </div>
+
+              </div>
+            </div>
+          </div>
+        </div>
 
       </div>
     </div>
@@ -136,8 +192,7 @@
       <div class="container">
         <h2 class="jumbotron-heading titulosBrancos">Sobre mim</h2>
         <p class="lead textoBranco">
-          Estudante de Análise e Desenvolvimento de Sistemas, 4° período, com 
-interesse pela área de Tecnologia. Grande disposição para o aprendizado e 
+          Formada de Análise e Desenvolvimento de Sistemas em outubro de 2023, amante de Tecnologia. Grande disposição para o aprendizado e 
 a aplicação de conhecimentos e habilidades. Anseio por iniciar a vida profissional na área da tecnologia para 
 colocar em prática tudo o que aprendi e a fim de adquirir novas habilidades e experiência.
 
