--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   </nav>
   <section class="jumbotron text-center corPrimaria ">
     <div class="container">
-      <img class="foto-perfil" src="/home/alineferreira/Documentos/Portfolio/img/ALINE.jpg" alt="Fotografia de Aline Ferreira">
+      <img class="foto-perfil" src="./img/ALINE.jpg" alt="Fotografia de Aline Ferreira">
       <h1 class="jumbotron-heading textoBranco">Aline Ferreira</h1>
       <p class="lead textoBranco">Estudante de Tecnologia - Criador de conteúdo - Analista e desenvolvedora</p>
       <p>
