--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             <img class="card-img-top"
               data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
               alt="Thumbnail [100%x225]" 
-              src="/home/alineferreira/Documentos/Portfolio/img/colagem-front-end-mentor.jpg" data-holder-rendered="true">
+              src="./img/colagem-front-end-mentor.jpg" data-holder-rendered="true">
             <div class="card-body">
               <p class="card-text"> Desafio Front-End-Mentor.
                 Tecnologias: </p>
